--- a/Experiment/Char_embedding.ipynb
+++ b/Experiment/Char_embedding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,16 @@
     "from sklearn.preprocessing import scale\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn import metrics\n",
-    "from sklearn import preprocessing\n"
+    "from sklearn import preprocessing\n",
+    "from keras.preprocessing import sequence\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout, Embedding, LSTM, Bidirectional\n",
+    "from keras.datasets import imdb\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,16 +42,16 @@
     "vectorizer = CharVectorizer(\"abcdefghijklmnopqrstuvwxyz1234567890\")\n",
     "train_df.columns  = ['firstname','lastname','dob','password',\n",
     "                'firstname_similarity','lastname_similarity',\n",
-    "                'dob_similarity','aggregate_similarity']\n",
+    "                'dob_similarity','aggregate_similarity','score']\n",
     "test_df.columns  = ['firstname','lastname','dob','password',\n",
     "                'firstname_similarity','lastname_similarity',\n",
-    "                'dob_similarity','aggregate_similarity']\n",
+    "                'dob_similarity','aggregate_similarity','score']\n",
     "#train_df.head() #if you want to see the shape of the data, uncomment this line\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -128,6 +132,7 @@
        "      <th>lastname_similarity</th>\n",
        "      <th>dob_similarity</th>\n",
        "      <th>aggregate_similarity</th>\n",
+       "      <th>score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -141,6 +146,7 @@
        "      <td>13.333</td>\n",
        "      <td>0.000</td>\n",
        "      <td>10.505</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -152,39 +158,43 @@
        "      <td>25.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>14.394</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,...</td>\n",
        "      <td>Kragh</td>\n",
-       "      <td>1977-03-02</td>\n",
+       "      <td>3/2/1977</td>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
        "      <td>0.000</td>\n",
        "      <td>18.182</td>\n",
        "      <td>12.500</td>\n",
        "      <td>10.227</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,...</td>\n",
        "      <td>Marques</td>\n",
-       "      <td>1978-06-13</td>\n",
+       "      <td>6/13/1978</td>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,...</td>\n",
        "      <td>15.385</td>\n",
        "      <td>12.500</td>\n",
        "      <td>31.579</td>\n",
        "      <td>19.821</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,...</td>\n",
        "      <td>KTEST</td>\n",
-       "      <td>1969-01-10</td>\n",
+       "      <td>1/10/1969</td>\n",
        "      <td>[[0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -194,9 +204,9 @@
        "                                           firstname   lastname         dob  \\\n",
        "0  [[0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...  McConnell  0000-00-00   \n",
        "1  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,...  McConnell  0000-00-00   \n",
-       "2  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,...      Kragh  1977-03-02   \n",
-       "3  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,...    Marques  1978-06-13   \n",
-       "4  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,...      KTEST  1969-01-10   \n",
+       "2  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,...      Kragh    3/2/1977   \n",
+       "3  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,...    Marques   6/13/1978   \n",
+       "4  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,...      KTEST   1/10/1969   \n",
        "\n",
        "                                            password  firstname_similarity  \\\n",
        "0  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...                18.182   \n",
@@ -205,15 +215,15 @@
        "3  [[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,...                15.385   \n",
        "4  [[0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0,...                 0.000   \n",
        "\n",
-       "   lastname_similarity  dob_similarity aggregate_similarity  \n",
-       "0               13.333           0.000               10.505  \n",
-       "1               25.000           0.000               14.394  \n",
-       "2               18.182          12.500               10.227  \n",
-       "3               12.500          31.579               19.821  \n",
-       "4                0.000           0.000                  0.0  "
+       "   lastname_similarity  dob_similarity aggregate_similarity  score  \n",
+       "0               13.333           0.000               10.505      1  \n",
+       "1               25.000           0.000               14.394      1  \n",
+       "2               18.182          12.500               10.227      1  \n",
+       "3               12.500          31.579               19.821      1  \n",
+       "4                0.000           0.000                    0      1  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,44 +234,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[array([[0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])\n",
+      "  'McConnell' '0000-00-00'\n",
+      "  array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0]])\n",
+      "  18.182000000000002 13.333 0.0 '10.505' 1]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Axiom\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:3: DeprecationWarning: \n",
+      ".ix is deprecated. Please use\n",
+      ".loc for label based indexing or\n",
+      ".iloc for positional indexing\n",
+      "\n",
+      "See the documentation here:\n",
+      "http://pandas.pydata.org/pandas-docs/stable/indexing.html#ix-indexer-is-deprecated\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    }
+   ],
    "source": [
-    "embedding_dim = 300\n",
-    "embeddings = 1 * np.random.randn(len(train_df['firstname']) + 1, embedding_dim)  # This will be the embedding matrix\n"
+    "embedding_dim = 6\n",
+    "embeddings = 1 * np.random.randn(len(train_df['firstname']),embedding_dim)  # This will be the embedding matrix\n",
+    "print(train_df.ix[:(0)].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 1.20033324, -0.64156785,  0.93126294, ...,  0.19070643,\n",
-       "         1.13666381, -1.26044319],\n",
-       "       [ 0.94767988,  0.29992227, -1.50366615, ..., -2.14784647,\n",
-       "         1.10746224, -1.25101093],\n",
-       "       [-1.13026801,  0.84383956,  0.47273204, ..., -0.64996327,\n",
-       "        -0.28787144,  1.27109161],\n",
-       "       ...,\n",
-       "       [ 0.90779874,  0.69396933, -1.3756296 , ...,  2.08972331,\n",
-       "        -1.69864626,  0.7783212 ],\n",
-       "       [ 0.23015444,  0.93102627,  0.11274816, ..., -0.20862911,\n",
-       "         0.98233363,  1.16686978],\n",
-       "       [ 0.40811826,  0.55182607, -0.12249662, ..., -0.58294447,\n",
-       "        -0.04344624,  0.82094559]])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.23718864 -1.01585029  0.43000853 -0.23621366  0.78981923  1.72737948]\n",
+      " [ 0.11113641 -0.13857883  0.33721756 -0.91252538 -0.9679848   0.4985273 ]]\n",
+      "1    [[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,...\n",
+      "2    [[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0,...\n",
+      "Name: firstname, dtype: object\n"
+     ]
     }
    ],
    "source": [
-    "#embeddings these weights represent a 1 or a zero\n"
+    "#embeddings these weights represent a 1 or a zero\n",
+    "print(embeddings[1:3])\n",
+    "print(train_df['firstname'][1:3])"
    ]
   },
   {
