--- a/Experiment/Char_embedding_scratch.ipynb
+++ b/Experiment/Char_embedding_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,24 +51,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "#create encoding function that we will use as a lambda \n",
     "#in the next following cells\n",
     "def encode(cell_entry):\n",
-    "    windows = [cell_\n",
+    "    windows = [cell_entry]\n",
     "    maxlen = max(len(cell) for cell in cell_entry)\n",
-    "    matrix = vectorizer.transform(cell_entry,maxlen)\n",
-    "    return matrix\n",
-    "    \n",
+    "    matrix = vectorizer.transform(windows,maxlen)\n",
+    "    print(matrix)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -76,54 +75,62 @@
      "output_type": "stream",
      "text": [
       "[[0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      "  0 0]\n",
-      " [0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      "  0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      "  0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      "  0 0]\n",
-      " [0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      "  0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
       "  0 0]]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(encode(\"miller\"))\n"
+    "np.array(encode(\"miller\")).shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      "  0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      "  0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0\n",
-      "  0 0 0 0 0 0 0 0 0 0 0 0]]\n"
+      "Chris\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, 190)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from CharVectorizer import CharVectorizer\n",
-    "vectorizer = CharVectorizer(\"abcdefghijklmnopqrstuvwxyz1234567890\")\n",
+    "def vect(word):\n",
+    "    vectorizer = CharVectorizer(\"abcdefghijklmnopqrstuvwxyz1234567890\")\n",
     "\n",
-    "windows = [\"miller\"] #words to vectorize\n",
+    "    windows = [word] #words to vectorize\n",
     "\n",
-    "target_length = max(len(window) for window in windows) #makes sure we have the max length string, any string less than this length gets padded\n",
+    "    target_length = max(len(window) for window in windows) #makes sure we have the max length string, any string less than this length gets padded\n",
     "\n",
-    "matrix = vectorizer.transform(windows,target_length) # give it the strings to vectorize as well as the max length for any padding issues\n",
+    "    matrix = vectorizer.transform(windows,target_length) # give it the strings to vectorize as well as the max length for any padding issues\n",
     "\n",
-    "print(matrix)"
+    "    return matrix\n",
+    "fname = vect(train_df['firstname'][0])\n",
+    "print(train_df['firstname'][0])\n",
+    "fname.shape"
    ]
   },
   {
